# aidaily

./: .env.example  .gitignore  README.md  index.html  pyproject.toml
config/: languages.py  settings.py
daily/: 2026-06-02.html  2026-06-05.html  2026-06-06.html  2026-06-09.html  2026-06-11.html  2026-06-13.html  2026-06-14.html  2026-06-15.html  2026-06-19.html  2026-06-22.html  2026-06-24.html  2026-06-25.html  2026-06-26.html  2026-06-28.html  2026-06-29.html  2026-07-01.html  2026-07-02.html  2026-07-03.html  2026-07-05.html  2026-07-06.html  2026-07-09.html  2026-07-11.html  2026-07-12.html  2026-07-16.html  2026-07-18.html  2026-07-19.html  2026-07-21.html  2026-07-23.html
docs/: index.html
projects/: 00-Evan--shattered-pixel-dungeon.html  0xPlaygrounds--rig.html  1Panel-dev--CordysCRM.html  1jehuang--jcode.html  3b1b--manim.html  4gray--iptvnator.html  4ian--GDevelop.html  521xueweihan--HelloGitHub.html  5rahim--seanime.html  648540858--wvp-GB28181-pro.html  666ghj--MiroFish.html  66HEX--frame.html  777genius--agent-teams-ai.html  78--xiaozhi-esp32.html  7Sageer--sublink-worker.html  AIDC-AI--Pixelle-Video.html  AIEraDev--Clypra.html  ATH-MaaS--Pixelle-Video.html  Acode-Foundation--Acode.html  Adam-CAD--CADAM.html  Adaptix-Framework--AdaptixC2.html  AdguardTeam--AdGuardHome.html  Agent-Field--agentfield.html  AgentWrapper--agent-orchestrator.html  AlexandreRouma--SDRPlusPlus.html  Alexays--Waybar.html  AlexsJones--llmfit.html  AlexxIT--go2rtc.html  Alishahryar1--free-claude-code.html  AlistGo--alist.html  AnInsomniacy--motrix-next.html  Anuken--Mindustry.html  (+1944 more)
(+2074 files in other folders)
